[workspace]
members = ["alioth", "alioth-cli", "macros", "serde-aco", "serde-aco-derive"]
resolver = "2"

[workspace.package]
authors = ["Changyuan Lyu <changyuan.lv@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/google/alioth"
version = "0.6.0"
edition = "2021"

[workspace.dependencies]
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8.5"
macros = { version = "0.6.0", path = "macros", package = "alioth-macros" }
alioth = { version = "0.6.0", path = "alioth" }
serde-aco = { version = "0.6.0", path = "serde-aco" }
serde-aco-derive = { version = "0.6.0", path = "serde-aco-derive" }
assert_matches = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = { version = "1" }
rstest = "0.23"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
