[workspace]
members = [
    "alioth",
    "alioth-cli",
    "alioth-macros",
    "serde-aco",
    "serde-aco-derive",
]
resolver = "2"

[workspace.package]
authors = ["Changyuan Lyu <changyuan.lv@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/google/alioth"
edition = "2024"

[workspace.dependencies]
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8.9"
alioth-macros = { version = "0.7.0", path = "alioth-macros" }
alioth = { version = "0.10.0", path = "alioth" }
ctor = "0.6"
flexi_logger = "0.31"
serde-aco = { version = "0.10.0", path = "serde-aco" }
serde-aco-derive = { version = "0.7.0", path = "serde-aco-derive" }
assert_matches = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = { version = "1" }
rstest = "0.26"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
