[workspace]
resolver = "3"
members = [
  "alioth",
  "alioth-cli",
  "alioth-macros",
  "serde-aco",
  "serde-aco-derive",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/google/alioth"
license = "Apache-2.0"

[workspace.dependencies]
alioth = { path = "alioth", version = "0.12.0" }
alioth-macros = { path = "alioth-macros", version = "0.12.0" }
assert_matches = "1"
ctor = "0.6"
flexi_logger = "0.31"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
pretty_assertions = "1"
proc-macro2 = "1"
quote = { version = "1" }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde-aco = { path = "serde-aco", version = "0.12.0" }
serde-aco-derive = { path = "serde-aco-derive", version = "0.12.0" }
snafu = "0.9.0"
syn = { version = "2", features = ["full"] }
tempfile = "3"
zerocopy = { version = "0.8.48", features = ["alloc", "derive"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
