[package]
name = "alioth"
version = "0.8.0"
edition.workspace = true
description = "A library for virtualization"
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
test-hv = []

[dependencies]
zerocopy = { version = "0.8.25", features = ["derive", "alloc"] }
bitflags = "2.9.1"
bitfield = "0.19.1"
log = "0.4"
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
libc = "0.2.172"
parking_lot.workspace = true
alioth-macros.workspace = true
serde.workspace = true
serde-aco.workspace = true
snafu.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
assert_matches.workspace = true
rstest.workspace = true
