[package]
name = "alioth"
version = "0.12.0"
edition.workspace = true
description = "Core library for Alioth, an experimental Type-2 hypervisor."
repository.workspace = true
license.workspace = true

[dependencies]
alioth-macros.workspace = true
bitfield = "0.19.4"
bitflags = "2.11.0"
chrono = "0.4.44"
flume.workspace = true
libc = "0.2.184"
log = "0.4"
mio = { version = "1", features = ["net", "os-ext", "os-poll"] }
parking_lot.workspace = true
serde.workspace = true
serde-aco.workspace = true
snafu.workspace = true
zerocopy.workspace = true

[dev-dependencies]
assert_matches.workspace = true
ctor.workspace = true
flexi_logger.workspace = true
rstest.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[features]
test-hv = []
