[package]
name = "alioth-macros"
version.workspace = true
edition.workspace = true
description = "Proc macros for Alioth"
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = { version = "1" }
