[package]
name = "serde-aco-derive"
authors.workspace = true
license.workspace = true
description = "Proc macros for serde-aco"
repository.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
