[package]
name = "serde-aco"
version = "0.3.0"
edition = "2021"
description = "Serialize/deserialize Alioth command line options"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
assert_matches = "1"
serde_bytes = "0.11"
