[package]
name = "serde-aco"
version.workspace = true
edition.workspace = true
description = "Serialize/deserialize Alioth command line options"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
assert_matches.workspace = true
serde_bytes = "0.11"
